--- a/templates/partial/layout/footer.html
+++ b/templates/partial/layout/footer.html
@@ -3,7 +3,18 @@
 <div class="footer">
     <div class="footer-content need-padding">
       <span class="info inline-word">Copyright © <span class="inline-word" id="copyright-info">{% if start != current %}{{ start }} - {% endif %}{{ current }}</span>{{ config.author }} 保留所有权利。</span>
-      <div class="info-group"><a class="info" href="https://beian.miit.gov.cn/" target="_blank">{{ config.extra.site.icp }}</a><a class="info" href="https://github.com/iWangJiaxiang/Homepage-Creators" target="_blank">主题：Homepage Creators</a></div>
+      <div class="info-group">
+        {% if config.extra.site.compliance_security and config.extra.site.compliance_security_link %}
+        <a class="info" href="{{ config.extra.site.compliance_security_link }}" target="_blank">
+          <img class="beian-icon" src="/img/beian.avif" style="vertical-align: middle; margin-right: 3px;">
+          {{ config.extra.site.compliance_security }}
+        </a>
+        {% endif %}
+        {% if config.extra.site.compliance_icp %}
+        <a class="info" href="https://beian.miit.gov.cn/" target="_blank">{{ config.extra.site.compliance_icp }}</a>
+        {% endif %}
+        <a class="info" href="https://github.com/iWangJiaxiang/Homepage-Creators" target="_blank">主题：Homepage Creators</a>
+      </div>
     </div>
 </div>
 {# 动态调整 #}
