--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -51,40 +51,102 @@
     {{ macro::open_graph(title=title, _permalink=_permalink, cover=cover, excerpt=excerpt, type=type) }}
 {% endmacro %}
 
-{# 生成缩略图，跳过avif格式和webp格式 {{ macro::thumbnail(url=post.cover) }} #}
-{% macro thumbnail(url, width=800, height=500, op="fit", format="webp") %}
-{% if url is ending_with(".avif") or url is ending_with(".webp") %}
+
+{# 生成缩略图，跳过avif格式和svg格式 {{ macro::thumbnail(url=post.cover) }} #}
+{% macro thumbnail(url, width=800, height=500, op="fit", quality=75, format="webp") %}
+{%- if url is ending_with(".avif") or url is ending_with(".svg") -%}
     {{ url | trim | safe }}
-{% else %}
-    {% if url %}    
-        {% set thumbnail = resize_image(path=url | safe, width=width, height=height, op=op, format="webp", quality=75) %}
-        {% set result = thumbnail.url %}
-    {% else %}
-        {% set result = config.extra.site.default_cover %}
-    {% endif %}
+{%- else -%}
+    {%- if url -%}
+        {%- if format == "avif" -%}
+            {%- if not config.extra.other.avif_enable -%}
+                {%- set format = "webp" -%}
+            {%- else -%}
+                {%- set quality = 75 -%}
+            {%- endif -%}
+        {%- endif -%}
+        {%- set thumbnail = resize_image(path=url | trim, width=width, height=height, op=op, format=format, quality=quality) -%}
+        {%- set result = thumbnail.url -%}
+    {%- else -%}
+        {%- set result = config.extra.site.default_cover -%}
+    {%- endif -%}
     {{ result | trim | safe }}
-{% endif %}
+{%- endif -%}
 {% endmacro %}
 
 {# 生成缩略图 小 {{ macro::thumbnail_s(url=post.cover) }} #}
-{% macro thumbnail_s(url, width=200, height=120, op="fit") %}
-{{-  macro::thumbnail(url=url | safe, width=width, height=height, op=op) -}}
+{% macro thumbnail_s(url, width=200, height=120, op="fit", format="webp") %}
+{{-  macro::thumbnail(url=url | safe, width=width, height=height, op=op, format=format) -}}
 {% endmacro %}
 
 {# 生成缩略图 中等 {{ macro::thumbnail_m(url=post.cover) }} #}
-{% macro thumbnail_m(url, width=500, height=300, op="fit") %}
-{{-  macro::thumbnail(url=url | safe, width=width, height=height, op=op) -}}
+{% macro thumbnail_m(url, width=500, height=300, op="fit", format="webp") %}
+{{-  macro::thumbnail(url=url | safe, width=width, height=height, op=op, format=format) -}}
 {% endmacro %}
 
 {# 生成缩略图 大 {{ macro::thumbnail_l(url=post.cover) }} #}
-{% macro thumbnail_l(url, width=800, height=500, op="fit") %}
-{{-  macro::thumbnail(url=url | safe, width=width, height=height, op=op) -}}
+{% macro thumbnail_l(url, width=800, height=500, op="fit", format="webp") %}
+{{-  macro::thumbnail(url=url | safe, width=width, height=height, op=op, format=format) -}}
 {% endmacro %}
 
 {# 生成缩略图 大 {{ macro::thumbnail_l(url=post.cover) }} #}
-{% macro thumbnail_xl(url, width=1200, height=800, op="fit") %}
-{{-  macro::thumbnail(url=url | safe, width=width, height=height, op=op) -}}
+{% macro thumbnail_xl(url, width=1200, height=800, op="fit", format="webp") %}
+{{-  macro::thumbnail(url=url | safe, width=width, height=height, op=op, format=format) -}}
 {% endmacro %}
+
+{# 渐进式加载图片 src 本地路径 #}
+{% macro img_progressive_loading(src, alt="", id="", class="", style="") %}
+<picture {% if id != "" %}id="{{ id }}" {% endif %} class="{% if class != "" %}{{ class }} {% endif %}progressive-picture"{% if style != "" %} {{ style }}{% endif %}>
+    {#- the small image that will be blurred -#}
+    <img class="progressive-thumbnail" src="{{ macro::thumbnail(url=src, width=16, op="fit_width", quality=1) | trim | safe }}" loading="lazy" decoding="async">
+    {#- a lazy responsive image with data-srcset -#}
+    {#- 75em = 1200px -#}
+    <source media="(min-width: 75em)" srcset="{{ macro::thumbnail(url=src, width=1200, op="fit_width", format="avif") | trim | safe }}?w=75em" />
+    {#- 60em = 960px -#}
+    <source media="(min-width: 60em)" srcset="{{ macro::thumbnail(url=src, width=960, op="fit_width", format="avif") | trim | safe }}?w=60em" />
+    {#- 45em = 720px -#}
+    <source media="(min-width: 45em)" srcset="{{ macro::thumbnail(url=src, width=720, op="fit_width", format="avif") | trim | safe }}?w=45em" />
+    {#- 30em = 500px -#}
+    <source media="(min-width: 30em)" srcset="{{ macro::thumbnail(url=src, width=500, op="fit_width", format="avif") | trim | safe }}?w=30em" />
+    {#- 22em = 360px -#}
+    <source media="(min-width: 22em)" srcset="{{ macro::thumbnail(url=src, width=360, op="fit_width", format="avif") | trim | safe }}?w=22em" />
+    {#- Generate a webp image as fallback if avif is not supported -#}
+    <img class="progressive-content"{% if alt != "" %} alt="{{ alt }}"{% endif %}
+      onload="progressiveLoad(this)" loading="lazy" decoding="async"
+      src="{{ macro::thumbnail(url=src, width=500, op="fit_width", format="webp") | trim | safe }}?w=30em"
+      srcset="{{ macro::thumbnail(url=src, width=360, op="fit_width", format="webp") | trim | safe }}?w=22em 360w,
+              {{ macro::thumbnail(url=src, width=500, op="fit_width", format="webp") | trim | safe }}?w=30em 500w,
+              {{ macro::thumbnail(url=src, width=720, op="fit_width", format="webp") | trim | safe }}?w=45em 720w,
+              {{ macro::thumbnail(url=src, width=960, op="fit_width", format="webp") | trim | safe }}?w=60em 960w,
+              {{ macro::thumbnail(url=src, width=1200, op="fit_width", format="webp") | trim | safe }}?w=75em 1200w"/>
+    {#- a noscript fallback -#}
+    <noscript>
+      <img loading="lazy" decoding="async"{% if alt != "" %} alt="{{ alt }}"{% endif %}
+        src="{{ macro::thumbnail(url=src, width=500, op="fit_width", format="webp") | trim | safe }}?w=30em">
+    </noscript>
+</picture>
+{% endmacro %}
+
+
+{# 渐进式加载图片 src 本地路径，无尺寸自适应，用于提供avif和webp支持 #}
+{% macro img_progressive_loading_single_size(src, alt="", id="", class="", style="", onclick="") %}
+<picture {% if id != "" %}id="{{ id }}" {% endif %} class="progressive-picture{% if class != "" %} {{ class }}{% endif %}"{% if style != "" %} style="{{ style }}"{% endif %}{% if onclick != "" %} onclick="{{ onclick }}"{% endif %}>
+    {#- the small image that will be blurred -#}
+    <img class="progressive-thumbnail" src="{{ macro::thumbnail(url=src, width=16, op="fit_width", quality=1) | trim | safe }}" loading="lazy" decoding="async">
+    {#- avif image -#}
+    <source media="(min-width: 1em)" srcset="{{ macro::thumbnail(url=src, format="avif") | trim | safe }}" />
+    {#- webp image -#}
+    <img class="progressive-content"{% if alt != "" %} alt="{{ alt }}"{% endif %}
+      onload="progressiveLoad(this)" loading="lazy" decoding="async"
+      src="{{ macro::thumbnail(url=src, format="webp") | trim | safe }}"/>
+    {#- a noscript fallback -#}
+    <noscript>
+      <img loading="lazy" decoding="async"{% if alt != "" %} alt="{{ alt }}"{% endif %}
+        src="{{ macro::thumbnail(url=src, format="webp") | trim | safe }}">
+    </noscript>
+</picture>
+{% endmacro %}
+
 
 {# 动态加载侧边小组件 #}
 {% macro render_widget(widget, value) %}
