🐛 Fix image size error

--- a/static/main.css
+++ b/static/main.css
@@ -768,8 +768,8 @@ span.avatar-name {
 }
 
 .avatar-image {
-    width: 100px;
-    height: 100px;
+    width: 100px !important;
+    height: 100px !important;
     border-radius: 50%;
     border: 4px solid #fff;
     box-shadow: var(--heo-shadow-lightblack) !important;
@@ -786,8 +786,8 @@ span.avatar-name {
 }
 
 .beian-icon {
-    height: 14px;
-    width: 14px
+    height: 14px !important;
+    width: 14px !important
 }
 
 .info-group {
