--- a/templates/partial/layout/head.html
+++ b/templates/partial/layout/head.html
@@ -9,4 +9,6 @@
 <meta name="theme-color" content="#1C1C1F">
 <link rel="stylesheet" href="/iconfont/style.css">
 <script src="/libs/jquery/jquery.min.js"></script>
+<script src="/js/simpleParallax.min.js"></script>
+<script src="/js/main.js"></script>
 <link rel="manifest" href="/manifest.json">
